- Renamed apply url: to apply from: - Renamed apply id: to apply plugin: - Renamed apply type: to apply plugin:

--- a/subprojects/gradle-docs/src/samples/clientModuleDependencies/build.gradle
+++ b/subprojects/gradle-docs/src/samples/clientModuleDependencies/build.gradle
@@ -7,7 +7,7 @@ subprojects {
             classpath 'junit:junit:4.7'
         }
     }
-    apply id: 'java'
+    apply plugin: 'java'
     repositories {
         mavenCentral()
     }
