--- a/subprojects/gradle-docs/src/samples/groovy/quickstart/build.gradle
+++ b/subprojects/gradle-docs/src/samples/groovy/quickstart/build.gradle
@@ -1,6 +1,6 @@
-apply id: 'eclipse'
+apply plugin: 'eclipse'
 // START SNIPPET use-plugin
-apply id: 'groovy'
+apply plugin: 'groovy'
 // END SNIPPET use-plugin
 
 // START SNIPPET groovy-dependency
