--- a/subprojects/gradle-docs/src/samples/java/quickstart/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/quickstart/build.gradle
@@ -15,11 +15,11 @@
  */
 
 // START SNIPPET use-plugin
-apply id: 'java'
+apply plugin: 'java'
 // END SNIPPET use-plugin
 
 // START SNIPPET use-eclipse-plugin
-apply id: 'eclipse'
+apply plugin: 'eclipse'
 // END SNIPPET use-eclipse-plugin
 
 // START SNIPPET customisation
