--- a/subprojects/gradle-docs/src/samples/userguide/multiproject/dependencies/java/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/multiproject/dependencies/java/build.gradle
@@ -2,7 +2,7 @@ subprojects {
     repositories {
         mavenCentral()
     }
-    apply id: 'java'
+    apply plugin: 'java'
     group = 'org.gradle.sample'
     version = '1.0'
 }
