--- a/subprojects/gradle-docs/src/samples/userguide/multiproject/dependencies/webDist/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/multiproject/dependencies/webDist/build.gradle
@@ -1,13 +1,13 @@
 dependsOnChildren()
 
 allprojects {
-    apply id: 'java'
+    apply plugin: 'java'
     group = 'org.gradle.sample'
     version = '1.0'
 }
 
 subprojects {
-    apply id: 'war'
+    apply plugin: 'war'
     repositories {
         mavenCentral()
     }
