--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/configureObjectUsingScript/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/configureObjectUsingScript/build.gradle
@@ -1,7 +1,7 @@
 task configure << {
     pos = new java.text.FieldPosition(10)
     // Apply the script
-    apply url: 'other.gradle', to: pos
+    apply from: 'other.gradle', to: pos
     println pos.beginIndex
     println pos.endIndex
 }
