--- a/subprojects/gradle-docs/src/samples/customBuildLanguage/reporting/build.gradle
+++ b/subprojects/gradle-docs/src/samples/customBuildLanguage/reporting/build.gradle
@@ -1,4 +1,4 @@
-apply type: org.gradle.samples.ProductModulePlugin
+apply plugin: org.gradle.samples.ProductModulePlugin
 
 dependencies {
     compile project(':identityManagement')
