--- a/subprojects/gradle-docs/src/samples/dependencies/build.gradle
+++ b/subprojects/gradle-docs/src/samples/dependencies/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 group = 'sealife'
 
 project(':atlantic') {
-    apply id: 'java'
+    apply plugin: 'java'
     configurations {
         other
     }
@@ -23,7 +23,7 @@ project(':atlantic') {
 }
 
 project(':northSea') {
-    apply id: 'java'
+    apply plugin: 'java'
     configurations {
         other
     }
