--- a/subprojects/gradle-docs/src/samples/java/multiproject/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/multiproject/build.gradle
@@ -1,7 +1,7 @@
 // START SNIPPET configuration-injection
 subprojects {
-    apply id: 'java'
-    apply id: 'eclipse'
+    apply plugin: 'java'
+    apply plugin: 'eclipse'
 
     repositories {
        mavenCentral()
