--- a/subprojects/gradle-docs/src/samples/java/onlyif/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/onlyif/build.gradle
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-apply id: 'java'
+apply plugin: 'java'
 
 repositories {
     mavenCentral()
