--- a/subprojects/gradle-docs/src/samples/java/testListener/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/testListener/build.gradle
@@ -18,7 +18,7 @@
 
 import static org.junit.Assert.*
 
-apply id: 'java'
+apply plugin: 'java'
 repositories.mavenCentral()
 dependencies.testCompile 'junit:junit:4.+'
 test.stopAtFailuresOrErrors = false
