--- a/subprojects/gradle-docs/src/samples/webApplication/customised/build.gradle
+++ b/subprojects/gradle-docs/src/samples/webApplication/customised/build.gradle
@@ -3,8 +3,8 @@ import org.apache.commons.httpclient.methods.GetMethod
 
 group = 'gradle'
 version = '1.0'
-apply id: 'war'
-apply id: 'jetty'
+apply plugin: 'war'
+apply plugin: 'jetty'
 
 configurations {
    moreLibs
