--- a/subprojects/gradle-docs/src/samples/maven/quickstart/build.gradle
+++ b/subprojects/gradle-docs/src/samples/maven/quickstart/build.gradle
@@ -13,6 +13,8 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+
 import org.apache.maven.settings.Settings
 
 apply plugin: 'java'
@@ -41,5 +43,5 @@ install.doLast {
 }
 
 clean {
-    from 'pomRepo'
+    delete 'pomRepo'
 }
