--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/mkdirTrap/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/mkdirTrap/build.gradle
@@ -13,10 +13,11 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 classesDir = file('build/classes')
 classesDir.mkdirs()
 task clean(type: Delete) << {
-    from 'build'
+    delete 'build'
 }
 task compile(dependsOn: 'clean') << {
     if (!classesDir.isDirectory()) {
