GRADLE-223, GRADKE-395, GRADLE-619, GRADLE-864, GRADLE-865, GRADLE-867, GRADLE-868, GRADLE-869, GRADLE-870 Improve manifest and osgi manifest handling.

--- a/subprojects/gradle-docs/src/samples/groovy/multiproject/testproject/build.gradle
+++ b/subprojects/gradle-docs/src/samples/groovy/multiproject/testproject/build.gradle
@@ -24,8 +24,12 @@ compileGroovy {
     groovyOptions.fork(memoryMaximumSize: '128M')
 }
 
-manifest.mainAttributes(myprop: 'myvalue')
-metaInf << fileTree(dir: 'src/metaInfFiles')
+jar {
+    manifest.attributes(myprop: 'myvalue')
+    metaInf {
+        from 'src/metaInfFiles'
+    }
+}
 
 test {
 	systemProperties['org.gradle.integtest.buildDir'] = buildDir.absolutePath
