--- a/subprojects/gradle-docs/src/samples/java/multiproject/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/multiproject/build.gradle
@@ -12,7 +12,10 @@ subprojects {
     }
 
     version = '1.0'
-    manifest.mainAttributes(provider: 'gradle')
+
+    jar {
+        manifest.attributes provider: 'gradle'
+    }
 }
 
 dependsOnChildren()
