--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/osgi/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/osgi/build.gradle
@@ -1,13 +1,18 @@
-apply plugin: 'osgi'
+apply {
+   plugin 'osgi'
+   plugin 'java'
+}
 
 // START SNIPPET configure-jar
-configure(jar.osgi) {
-    name = 'overwrittenSpecialOsgiName'
-    instruction 'Private-Package',
-            'org.mycomp.package1',
-            'org.mycomp.package2'
-    instruction 'Bundle-Vendor', 'MyCompany'
-    instruction 'Bundle-Description', 'Platform2: Metrics 2 Measures Framework'
-    instruction 'Bundle-DocURL', 'http://www.mycompany.com'
+jar {
+    manifest {
+        name = 'overwrittenSpecialOsgiName'
+        instruction 'Private-Package',
+                'org.mycomp.package1',
+                'org.mycomp.package2'
+        instruction 'Bundle-Vendor', 'MyCompany'
+        instruction 'Bundle-Description', 'Platform2: Metrics 2 Measures Framework'
+        instruction 'Bundle-DocURL', 'http://www.mycompany.com'
+    }
 }
 // END SNIPPET configure-jar
