--- a/subprojects/gradle-docs/src/samples/osgi/build.gradle
+++ b/subprojects/gradle-docs/src/samples/osgi/build.gradle
@@ -16,10 +16,12 @@ dependencies {
     compile group: 'org.eclipse', name: 'osgi', version: '3.4.3.R34x_v20081215-1030'
 }
 
-configure(jar.osgi) {
-    version = '1.0'
-    name = 'Example Gradle Activator'
-    instruction 'Bundle-Activator', 'org.gradle.GradleActivator'
-    instruction 'Import-Package', '*'
-    instruction 'Export-Package', '*'
+jar {
+    manifest {
+        version = '1.0'
+        name = 'Example Gradle Activator'
+        instruction 'Bundle-Activator', 'org.gradle.GradleActivator'
+        instruction 'Import-Package', '*'
+        instruction 'Export-Package', '*'
+    }
 }
