GRADLE-290, GRADLE-433, GRADLE-841, GRADLE-697, GRADLE-798 Allow for convenient customization of the generated pom.

--- a/build.gradle
+++ b/build.gradle
@@ -127,7 +127,7 @@ allprojects {
     ideDir = file('ide')
     task ide(type: Sync) {
         into "$ideDir/lib"
-        from { config.copyRecursive(DependencySpecs.type(Type.EXTERNAL)).files }
+        from { config.copyRecursive {dep -> !(dep instanceof ProjectDependency)}.files }
     }
 }
 
