- Some minor tidy ups

--- a/subprojects/gradle-docs/src/samples/maven/pomGeneration/build.gradle
+++ b/subprojects/gradle-docs/src/samples/maven/pomGeneration/build.gradle
@@ -11,7 +11,7 @@ archivesBaseName = 'mywar'
 buildDirName = 'target'
 
 repositories {
-    flatDir(dirs: "$rootDir/lib")
+    flatDir(dirs: "$projectDir/lib")
 }
 
 dependencies {
