--- a/subprojects/gradle-docs/src/samples/webApplication/customised/build.gradle
+++ b/subprojects/gradle-docs/src/samples/webApplication/customised/build.gradle
@@ -11,7 +11,7 @@ configurations {
 }
 
 repositories {
-   flatDir(dirs: "$rootDir/lib")
+   flatDir(dirs: "$projectDir/lib")
    mavenCentral()
 }
 
