--- a/subprojects/gradle-docs/src/samples/ivypublish/build.gradle
+++ b/subprojects/gradle-docs/src/samples/ivypublish/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 }
 
 ant {
-    importBuild "$rootDir/build.xml"
+    importBuild "$projectDir/build.xml"
     buildDir = owner.buildDir.toString()
 }
 
