Updated Maven coverage in the usersguide. Moved stuff from the artifact chapter into the Maven plugin chapter. Changed the order of those chapter.

--- a/subprojects/gradle-docs/src/samples/maven/pomGeneration/build.gradle
+++ b/subprojects/gradle-docs/src/samples/maven/pomGeneration/build.gradle
@@ -82,9 +82,11 @@ task writeNewPom << {
 }
 // END SNIPPET new-pom
 
+// START SNIPPET when-configured
 [installer, deployer]*.pom*.whenConfigured {pom ->
     pom.dependencies.find {dep -> dep.groupId == 'group3' && dep.artifactId == 'runtime' }.optional = true
 }
+// END SNIPPET when-configured
 
 task writeDeployerPom(dependsOn: uploadArchives) << {
     deployer.pom.writeTo("$buildDir/deployerpom.xml")
