--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -13,10 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-import org.apache.ivy.plugins.resolver.*
 
-apply id: 'groovy'
-apply id: 'code-quality'
+apply plugin: 'groovy'
+apply plugin: 'code-quality'
 
 repositories {
     mavenRepo(urls: 'http://gradle.artifactoryonline.com/gradle/libs')
