--- a/subprojects/gradle-wrapper/wrapper.gradle
+++ b/subprojects/gradle-wrapper/wrapper.gradle
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-apply id: 'groovy'
+apply plugin: 'groovy'
 
 dependencies {
     groovy libraries.groovy_depends
