Various little changes
- Added plexus-annotations jar to fix compile error under Java 5.
- Added some docs.
- The MavenPom exposes now the Model instead of the MavenProject.
- Turned OsgiPluginConvention into Java.

--- a/build.gradle
+++ b/build.gradle
@@ -335,16 +335,15 @@ task ciBuild(dependsOn: [clean, testedDists])
 
 task release(dependsOn: [uploadDists, ':docs:uploadDocs']) << {
     // Update the version properties in gradle.properties
-    Properties props = new Properties()
-    File propsFile = file('gradle.properties')
-    propsFile.withReader { props.load(it) }
-    props.previousVersion = props.nextVersion
-    def nextVersion = props.nextVersion.split('\\.')
-    nextVersion[1] = (nextVersion[1] as Integer) +1
-    props.nextVersion = nextVersion.join('.')
-    propsFile.withWriter { props.store(it, 'properties') }
+//    Properties props = new Properties()
+//    File propsFile = file('gradle.properties')
+//    propsFile.withReader { props.load(it) }
+//    props.previousVersion = props.nextVersion
+//    def nextVersion = props.nextVersion.split('\\.')
+//    nextVersion[1] = (nextVersion[1] as Integer) +1
+//    props.nextVersion = nextVersion.join('.')
+//    propsFile.withWriter { props.store(it, 'properties') }
 // todo rewrite release functionality for Git. Until then we have to do tagging and branching manually.
-//    svn.release()
 }
 
 task wrapper(type: Wrapper, dependsOn: binZip)
