--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 #properties
 #Mon Nov 16 07:56:40 EST 2009
-previousVersion=0.9-preview1
-nextVersion=0.9
+previousVersion=0.9-preview-1
+nextVersion=0.9-preview-1
