--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/osgi/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/osgi/build.gradle
@@ -5,7 +5,7 @@ apply {
 
 // START SNIPPET configure-jar
 jar {
-    manifest {
+    manifest { // the manifest of the default jar is of type OsgiManifest
         name = 'overwrittenSpecialOsgiName'
         instruction 'Private-Package',
                 'org.mycomp.package1',
@@ -13,6 +13,11 @@ jar {
         instruction 'Bundle-Vendor', 'MyCompany'
         instruction 'Bundle-Description', 'Platform2: Metrics 2 Measures Framework'
         instruction 'Bundle-DocURL', 'http://www.mycompany.com'
+    }
+}
+task fooJar(type: Jar) {
+    manifest = osgiManifest {
+        instruction 'Bundle-Vendor', 'MyCompany'    
     }
 }
 // END SNIPPET configure-jar
