--- a/subprojects/gradle-core/core.gradle
+++ b/subprojects/gradle-core/core.gradle
@@ -68,7 +68,8 @@ dependencies {
             'org.fusesource.jansi:jansi:1.2',
             'org.jruby.ext.posix:jna-posix:1.0.3',
             'org.sonatype.pmaven:pmaven-common:0.8-20100325@jar',
-            'org.sonatype.pmaven:pmaven-groovy:0.8-20100325@jar'
+            'org.sonatype.pmaven:pmaven-groovy:0.8-20100325@jar',
+            'org.codehaus.plexus:plexus-component-annotations:1.5.2'
 
     runtime 'net.java.dev.jna:jna:3.2.2'
 
