--- a/subprojects/gradle-docs/docs.gradle
+++ b/subprojects/gradle-docs/docs.gradle
@@ -184,7 +184,7 @@ task javadoc(type: Javadoc) {
     include 'org/gradle/external/javadoc/**'
     exclude '**/internal/**'
     optionsFile = file("$buildDir/tmp/javadoc.options")
-    options.links("http://java.sun.com/j2se/1.5.0/docs/api", "http://maven.apache.org/ref/2.2.1/maven-core/apidocs",
+    options.links("http://java.sun.com/j2se/1.5.0/docs/api", "http://groovy.codehaus.org/gapi/", "http://maven.apache.org/ref/2.2.1/maven-core/apidocs",
         "http://maven.apache.org/ref/2.2.1/maven-model/apidocs")
     doFirst {
         title = "Gradle API $version"
