GRADLE-889 Improvements to 'writing custom plugins' chapter. Patch submitted by Hamlet D'Arcy

--- a/subprojects/gradle-docs/src/samples/userguide/organizeBuildLogic/customPluginWithAdvancedConvention/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/organizeBuildLogic/customPluginWithAdvancedConvention/build.gradle
@@ -1,16 +1,25 @@
 apply plugin: GreetingPlugin
 
-greeting = 'Hi from Gradle'
+greet {
+    message = 'Hi from Gradle' 
+}
 
 class GreetingPlugin implements Plugin<Project> {
     def void apply(Project project) {
+
         project.convention.plugins.greet = new GreetingPluginConvention()
         project.task('hello') << {
-            println project.convention.plugins.greet.greeting
+            println project.convention.plugins.greet.message
         }
     }
 }
 
 class GreetingPluginConvention {
-    def String greeting = 'Hello from GreetingPlugin'
+    String message
+
+    def greet(Closure closure) {
+        closure.delegate = this
+        closure() 
+    }
 }
+
