--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ libraries = [
         ant_junit       : 'org.apache.ant:ant-junit:1.8.0@jar',
         ant_launcher    : 'org.apache.ant:ant-launcher:1.8.0@jar',
         ant_nodeps      : 'org.apache.ant:ant-nodeps:1.8.0@jar',
+        ant_antlr      : 'org.apache.ant:ant-antlr:1.8.0@jar',
         antlr           : 'antlr:antlr:2.7.7@jar',
         asm_all         : 'asm:asm-all:3.2@jar',
         commons_cli     : 'commons-cli:commons-cli:1.2@jar',
@@ -367,7 +368,7 @@ def runtimeProjects() {
 }
 
 def pluginProjects() {
-    ['plugins', 'codeQuality', 'jetty', 'wrapper'].collect { project(it) }
+    ['plugins', 'codeQuality', 'jetty', 'antlr', 'wrapper'].collect { project(it) }
 }
 
 class Version {
