GRADLE-711 - Added some unit test and documentation coverage for the antlr plugin

--- a/subprojects/gradle-docs/src/samples/antlr/build.gradle
+++ b/subprojects/gradle-docs/src/samples/antlr/build.gradle
@@ -2,11 +2,15 @@
 apply plugin: 'antlr'
 // END SNIPPET use-plugin
 
+// START SNIPPET declare-dependency
 repositories {
     mavenCentral()
 }
 
 dependencies {
     antlr 'antlr:antlr:2.7.7'
+// END SNIPPET declare-dependency
     testCompile 'junit:junit:4.7'
+// START SNIPPET declare-dependency
 }
+// END SNIPPET declare-dependency
