- Some user guide integration test fixes

--- a/subprojects/gradle-docs/src/samples/userguide/files/fileCollections/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/files/fileCollections/build.gradle
@@ -1,5 +1,3 @@
-import java.util.concurrent.Callable
-
 // START SNIPPET simple-params
 FileCollection collection = files('src/file1.txt', new File('src/file2.txt'), ['src/file3.txt', 'src/file4.txt'])
 // END SNIPPET simple-params
@@ -28,6 +26,7 @@ task list << {
 }
 // END SNIPPET closure
 
+task usage << {
 collection = files('src/file1.txt')
 
 //START SNIPPET usage
@@ -49,3 +48,4 @@ def union = collection + files('src/file3.txt')
 def different = collection - files('src/file3.txt')
 
 //END SNIPPET usage
+}
