--- a/subprojects/gradle-docs/src/samples/userguide/buildlifecycle/buildProjectEvaluateEvents/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/buildlifecycle/buildProjectEvaluateEvents/build.gradle
@@ -1,6 +1,6 @@
 // START SNIPPET evaluate-events
-gradle.afterProject {project, exception ->
-    if (exception) {
+gradle.afterProject {project, projectState ->
+    if (projectState.failure) {
         println "Evaluation of $project FAILED"
     } else {
         println "Evaluation of $project succeeded"
