--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/mkdirTrap/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/mkdirTrap/build.gradle
@@ -1,6 +1,6 @@
 classesDir = file('build/classes')
 classesDir.mkdirs()
-task clean(type: Delete) << {
+task clean(type: Delete) {
     delete 'build'
 }
 task compile(dependsOn: 'clean') << {
