- Switch on stdout capture for the entire build, and removed some special case stuff (eg in listener handling and text report generator) - Fixed StandardOutputLogging.restoreState() to restore logging levels.

--- a/subprojects/gradle-docs/src/samples/logging/project2/build.gradle
+++ b/subprojects/gradle-docs/src/samples/logging/project2/build.gradle
@@ -1,10 +1,13 @@
-dependsOn(':project1')
-println('quietProject2Out')
 
 buildscript {
     println('quietProject2ScriptClassPathOut')
+    captureStandardOutput LogLevel.INFO
     logger.info('infoProject2ScriptClassPathOut')
 }
+
+dependsOn(':project1')
+// stdout capture config injected
+println('infoProject2Out')
 
 gradle.taskGraph.whenReady {
     println 'quietProject2CallbackOut'
