--- a/subprojects/gradle-open-api/open-api.gradle
+++ b/subprojects/gradle-open-api/open-api.gradle
@@ -4,5 +4,36 @@ dependencies {
     groovy libraries.groovy_depends
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
+
+    testCompile project(path: ':core', configuration: 'integTestFixtures')
+    testRuntime project(path: ':core', configuration: 'integTestFixturesRuntime')
 }
 
+//define our integration tests
+configurations {
+    integTestCompile {
+        extendsFrom testCompile
+    }
+    integTestRuntime {
+        extendsFrom integTestCompile, testRuntime
+    }
+}
+
+//define the source sets for our integration tests
+sourceSets {
+    integTest {
+        compileClasspath = sourceSets.test.classes + sourceSets.main.classes + configurations.integTestCompile + project(':ui').sourceSets.main.classes
+        runtimeClasspath = classes + compileClasspath + configurations.integTestRuntime
+    }
+}
+
+//create a task for running the integration tests
+task integTest(type: Test, dependsOn: [ rootProject.intTestImage ]) {
+    systemProperties['integTest.gradleHomeDir'] = rootProject.intTestImage.integTestGradleHome.absolutePath
+    systemProperties['integTest.srcDir'] = file('src').absolutePath
+    systemProperties['integTest.gradleUserHomeDir'] = rootProject.integTest.integTestUserDir.absolutePath
+    testClassesDir = sourceSets.integTest.classesDir
+    classpath = sourceSets.integTest.runtimeClasspath + configurations.integTestRuntime
+
+    doFirst { task -> systemProperties['integTest.gradleHomeDir'] = rootProject.intTestImage.integTestGradleHome.absolutePath }
+}
